Restructure for clean URLs: move pages to folders

--- a/product/index.html
+++ b/product/index.html
@@ -16,9 +16,9 @@
     <meta id="og-image" property="og:image" content="https://rcrodamientos.com/assets/images/og-default.jpg">
 
     <!-- Favicon & Icons -->
-    <link rel="icon" href="favicon.ico" sizes="any">
-    <link rel="icon" href="assets/images/favicon-32x32.png" type="image/png">
-    <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" href="../favicon.ico" sizes="any">
+    <link rel="icon" href="../assets/images/favicon-32x32.png" type="image/png">
+    <link rel="apple-touch-icon" href="../assets/images/apple-touch-icon.png">
 
     <!-- Structured Data Placeholder -->
     <script id="product-schema" type="application/ld+json">{}</script>
@@ -26,7 +26,7 @@
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Custom Styles Link -->
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
     <script>
         tailwind.config = {
             theme: {
@@ -74,7 +74,7 @@
     <div id="contact-modal-container"></div>
 
     <!-- JavaScript Link -->
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 
 </html>
