--- a/quienes-somos/index.html
+++ b/quienes-somos/index.html
@@ -15,12 +15,12 @@
     <meta property="og:image" content="https://rcrodamientos.com/assets/images/og-quienes-somos.jpg">
 
     <!-- Favicon & Icons -->
-    <link rel="icon" href="favicon.ico" sizes="any">
-    <link rel="icon" href="assets/images/favicon-32x32.png" type="image/png">
-    <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
+    <link rel="icon" href="../favicon.ico" sizes="any">
+    <link rel="icon" href="../assets/images/favicon-32x32.png" type="image/png">
+    <link rel="apple-touch-icon" href="../assets/images/apple-touch-icon.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
     <script>
         tailwind.config = {
             theme: {
@@ -63,7 +63,7 @@
                     <div class="grid grid-cols-2 gap-4 relative">
                         <!-- Main Large Image (Top Left) -->
                         <div class="col-span-2 relative group mb-8">
-                            <img src="assets/images/quienes_1.webp" alt="Instalaciones"
+                            <img src="../assets/images/quienes_1.webp" alt="Instalaciones"
                                 class="rounded-lg shadow-2xl w-full object-cover aspect-[4/3] group-hover:scale-[1.02] transition-transform duration-700">
                             <div class="absolute -bottom-6 -right-6 bg-primary-soft p-6 shadow-2xl z-20">
                                 <span class="text-4xl font-heading font-bold text-black italic leading-none">10+
@@ -73,17 +73,17 @@
 
                         <!-- Staggered Smaller Images -->
                         <div class="relative mt-8">
-                            <img src="assets/images/quienes_2.webp" alt="Equipo"
+                            <img src="../assets/images/quienes_2.webp" alt="Equipo"
                                 class="rounded-lg shadow-xl w-full aspect-square object-cover transform -rotate-1 hover:rotate-0 transition-transform duration-500">
                         </div>
                         <div class="relative -mt-12 ml-4">
-                            <img src="assets/images/quienes_3.webp" alt="Logística"
+                            <img src="../assets/images/quienes_3.webp" alt="Logística"
                                 class="rounded-lg shadow-xl w-full aspect-square object-cover transform rotate-2 hover:rotate-0 transition-transform duration-500">
                         </div>
 
                         <!-- Bottom Floating Image -->
                         <div class="col-span-2 mt-4 px-12">
-                            <img src="assets/images/quienes_4.webp" alt="Detalle"
+                            <img src="../assets/images/quienes_4.webp" alt="Detalle"
                                 class="rounded-lg shadow-lg w-full h-32 object-cover opacity-90 hover:opacity-100 transition-opacity">
                         </div>
                     </div>
@@ -140,7 +140,7 @@
     <div id="footer-container"></div>
     <div id="contact-modal-container"></div>
 
-    <script src="assets/js/main.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 
 </html>
